--- a/index.html
+++ b/index.html
@@ -2,5 +2,10 @@
 <<body>
   <<header>
     <<h1>Love's Pc Repair</h1>
+    <ul>
+      <li>About us</li>
+      <li>Services</li>
+      <li>Contact Us</li>
+    </ul>
   </header>
 </body>
